Spring Data JPA 적용 및 리팩토링